--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "AGPL-3.0",
   "packageManager": "pnpm@10.5.2",
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "better-sqlite3": "^12.2.0",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
     "object-hash": "^3.0.0"
