Fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord-selfassign-roles-bot",
+  "name": "atelier-helper-bot",
   "type": "module",
   "version": "1.0.0",
   "description": "",
